# smb4k

./: .gitlab-ci.yml  .kde-ci.yml  AUTHORS  BUGS  CMakeLists.txt  ChangeLog  ChangeLog.license  FAQ  Messages.sh  README  README.md  TODO  config.h.cmake
core/: CMakeLists.txt  Messages.sh  smb4k.kcfg  smb4k.notifyrc  smb4kauthinfo.cpp  smb4kauthinfo.h  smb4kautostartmanager.cpp  smb4kautostartmanager.h  smb4kbasicnetworkitem.cpp  smb4kbasicnetworkitem.h  smb4kbookmark.cpp  smb4kbookmark.h  smb4kbookmarkhandler.cpp  smb4kbookmarkhandler.h  smb4kbookmarkhandler_p.cpp  smb4kbookmarkhandler_p.h  smb4kbookmarkobject.cpp  smb4kbookmarkobject.h  smb4kclient.cpp  smb4kclient.h  smb4kclient_p.cpp  smb4kclient_p.h  smb4kcore.cpp  smb4kcore.h  smb4kcore_export.h  smb4kcoremessage.cpp  smb4kcoremessage.h  smb4kcredentialsmanager.cpp  smb4kcredentialsmanager.h  smb4kcustomoptions.cpp  smb4kcustomoptions.h  smb4kcustomoptionsmanager.cpp  smb4kcustomoptionsmanager.h  smb4kcustomoptionsmanager_p.cpp  smb4kcustomoptionsmanager_p.h  smb4kcustomsettings.cpp  smb4kcustomsettings.h  smb4kcustomsettingsmanager.cpp  smb4kcustomsettingsmanager.h  smb4kdeclarative.cpp  (+96 more)
data/: CMakeLists.txt  authentication1.sh  network1.sh  network2.sh  samba1.sh  samba2.sh  samba3.sh  smb4k_3_0_0.upd  smb4ksettings.upd  userinterface1.sh  userinterface2.sh  userinterface3.sh  userinterface4.sh  userinterface5.sh
helpers/: CMakeLists.txt  smb4kmounthelper.actions  smb4kmounthelper.cpp  smb4kmounthelper.h
kioslave/: CMakeLists.txt  kio_smb4k.cpp  kio_smb4k.h  smb4k-network.desktop  smb4k.protocol
plasmoid/: CMakeLists.txt  Messages.sh  plasma-applet-smb4k-qml.desktop
plasmoid/package/: metadata.desktop  metadata.json
plasmoid/package5/: metadata.json
plasmoid/plugin/: CMakeLists.txt  qmldir  smb4kbookmarkobject.cpp  smb4kbookmarkobject.h  smb4kdeclarative.cpp  smb4kdeclarative.h  smb4kdeclarative_p.cpp  smb4kdeclarative_p.h  smb4knetworkobject.cpp  smb4knetworkobject.h  smb4kprofileobject.cpp  smb4kprofileobject.h  smb4kqmlplugin.cpp  smb4kqmlplugin.h
po/: CMakeLists.txt  smb4k.pot
po/ar/: plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/ast/: plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/bg/: CMakeLists.txt  plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/bs/: plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/ca/: plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/ca@valencia/: plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/cs/: CMakeLists.txt  plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/da/: CMakeLists.txt  plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/de/: CMakeLists.txt  plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/el/: plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/en_GB/: plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/eo/: plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/es/: CMakeLists.txt  plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/et/: plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/eu/: plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/fi/: plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/fr/: CMakeLists.txt  plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/ga/: plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/gl/: plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/he/: plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/hi/: plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/hu/: CMakeLists.txt  plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/ia/: plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/ie/: plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/is/: CMakeLists.txt  smb4k-core.po  smb4k.po
po/it/: CMakeLists.txt  plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/ja/: CMakeLists.txt  plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/ka/: plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/ko/: plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/lt/: plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/mai/: smb4k-core.po  smb4k.po
po/mr/: smb4k-core.po  smb4k.po
po/nb/: CMakeLists.txt  smb4k-core.po  smb4k.po
po/nds/: plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/nl/: CMakeLists.txt  plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/nn/: plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/pl/: CMakeLists.txt  plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/pt/: plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/pt_BR/: CMakeLists.txt  plasma_applet_org.kde.smb4kqml.po  smb4k-core.po  smb4k.po
po/ro/: smb4k-core.po  smb4k.po
po/ru/: CMakeLists.txt  (+3 more)
smb4k/: CMakeLists.txt  main.cpp  org.kde.smb4k.appdata.xml  org.kde.smb4k.desktop  smb4k.appdata.xml  smb4k.desktop  smb4k.qrc  smb4k_shell.rc  smb4kbookmarkdialog.cpp  smb4kbookmarkdialog.h  smb4kbookmarkeditor.cpp  smb4kbookmarkeditor.h  smb4kbookmarkmenu.cpp  smb4kbookmarkmenu.h  smb4kconfigdialog.cpp  smb4kconfigdialog.h  smb4kconfigpageauthentication.cpp  smb4kconfigpageauthentication.h  smb4kconfigpagebookmarks.cpp  smb4kconfigpagebookmarks.h  smb4kconfigpagecustomoptions.cpp  smb4kconfigpagecustomoptions.h  smb4kconfigpagecustomsettings.cpp  smb4kconfigpagecustomsettings.h  smb4kconfigpagemounting.cpp  smb4kconfigpagemounting.h  smb4kconfigpagenetwork.cpp  smb4kconfigpagenetwork.h  smb4kconfigpageprofiles.cpp  smb4kconfigpageprofiles.h  smb4kconfigpagesamba.cpp  smb4kconfigpagesamba.h  smb4kconfigpageshares.cpp  smb4kconfigpageshares.h  smb4kconfigpagesynchronization.cpp  smb4kconfigpagesynchronization.h  smb4kconfigpageuserinterface.cpp  smb4kconfigpageuserinterface.h  smb4kcustomsettingseditor.cpp  smb4kcustomsettingseditor.h  (+54 more)
utilities/: CMakeLists.txt  smb4k_kill.cpp  smb4k_mount.cpp  smb4k_sudowriter.cpp  smb4k_umount.cpp
(+201 files in other folders)
